# GravityOS

./: .gitignore  index.html  render.yaml
apps/api/: .env.example  Dockerfile  pyproject.toml
apps/api/app/: main.py
apps/api/app/core/: auth.py  config.py  db.py  deps.py
apps/api/app/routers/: billing.py  budgets.py  calendar.py  catalogue.py  dashboard.py  intelligence.py  marketing.py  me.py  projects.py  releases.py  tasks.py  workspaces.py
apps/api/app/schemas/: budgets.py  calendar.py  catalogue.py  marketing.py  projects.py  releases.py  tasks.py  workspaces.py
apps/api/tests/: test_smoke.py
apps/web/: .env.example  package-lock.json  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/src/app/(app)/: layout.tsx
apps/web/src/app/(app)/budget/: page.tsx
apps/web/src/app/(app)/calendar/: page.tsx
apps/web/src/app/(app)/catalogue/: page.tsx
apps/web/src/app/(app)/dashboard/: page.tsx
apps/web/src/app/(app)/marketing/: page.tsx
apps/web/src/components/: ui.tsx
apps/web/src/lib/: api.ts  supabase.ts  workspace.tsx
apps/web/src/lib/queries/: useBudgets.ts  useCalendar.ts  useCatalogue.ts  useDashboard.ts  useMarketing.ts  useMe.ts  useProjects.ts  useReleasePlan.ts  useTasks.ts
docs/: ARCHITECTURE.md  PRD.md  revenue-engine.md
supabase/: seed.sql
supabase/migrations/: 0001_init_schema.sql  0002_rls_policies.sql  0003_auth_profile_trigger.sql  0004_harden_set_updated_at_search_path.sql  0005_move_helpers_to_private_schema.sql  0006_catalogue_storage_bucket.sql  0007_auto_provision_workspace.sql
(+6 files in other folders)
